fixing issues on safari

--- a/deanpshaw.css
+++ b/deanpshaw.css
@@ -7,6 +7,8 @@ html {
   margin: 0;
 }
 body {
+  -webkit-flex:1;
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
